--- a/index.mdx
+++ b/index.mdx
@@ -1,97 +1,23 @@
 ---
-title: "Introduction"
-description: "Welcome to the new home for your documentation"
+title: "What Is Mumble"
 ---
 
-## Setting up
+Mumble is a voice-first AI workspace that captures your ideas and meetings without any context switching. You speak, and Mumble instantly turns everything into organized notes, summaries, and calendar events.
 
-Get your documentation site up and running in minutes.
+**The problem Mumble AI solves**
 
-<Card
-  title="Start here"
-  icon="rocket"
-  href="/quickstart"
-  horizontal
->
-  Follow our three step quickstart guide.
-</Card>
+Real work happens while you talk, listen, and move between tasks. That is also where most things get lost. Mumble keeps your ideas, conversations, and people organized automatically so you never lose momentum:
 
-## Make it yours
+- turns your voice into structured notes and builds your knowledge base as you speak
+- produces clean summaries even for long meeting sessions
+- speeds up thinking by letting you invoke the agent through a shortcut
+- keeps your schedule organized so nothing falls through the cracks
 
-Design a docs site that looks great and empowers your users.
+**What you get**
 
-<Columns cols={2}>
-  <Card
-    title="Edit locally"
-    icon="pen-to-square"
-    href="/development"
-  >
-    Edit your docs locally and preview them in real time.
-  </Card>
-  <Card
-    title="Customize your site"
-    icon="palette"
-    href="/essentials/settings"
-  >
-    Customize the design and colors of your site to match your brand.
-  </Card>
-    <Card
-    title="Set up navigation"
-    icon="map"
-    href="/essentials/navigation"
-  >
-    Organize your docs to help users find what they need and succeed with your product.
-  </Card>
-  <Card
-    title="API documentation"
-    icon="terminal"
-    href="/api-reference/introduction"
-  >
-    Auto-generate API documentation from OpenAPI specifications.
-  </Card>
-</Columns>
+- 5x faster capture
+- hands free note-taking and management
+- a growing memory bank for tasks and relationships
+- an AI assistant that keeps your notes and tasks organized
 
-## Create beautiful pages
-
-Everything you need to create world-class documentation.
-
-<Columns cols={2}>
-  <Card
-    title="Write with MDX"
-    icon="pen-fancy"
-    href="/essentials/markdown"
-  >
-    Use MDX to style your docs pages.
-  </Card>
-  <Card
-    title="Code samples"
-    icon="code"
-    href="/essentials/code"
-  >
-    Add sample code to demonstrate how to use your product.
-  </Card>
-  <Card
-    title="Images"
-    icon="image"
-    href="/essentials/images"
-  >
-    Display images and other media.
-  </Card>
-  <Card
-    title="Reusable snippets"
-    icon="recycle"
-    href="/essentials/reusable-snippets"
-  >
-    Write once and reuse across your docs.
-  </Card>
-</Columns>
-
-## Need inspiration?
-
-<Card
-  title="See complete examples"
-  icon="stars"
-  href="https://mintlify.com/customers"
->
-  Browse our showcase of exceptional documentation sites.
-</Card>
+We’re continuing to expand Mumble’s voice skills so you can manage your work end to end through conversation and stay organized
