--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,80 +1,37 @@
 ---
-title: "Quickstart"
+title: "Getting Started"
 description: "Start building awesome documentation in minutes"
 ---
 
-## Get started in three steps
+Welcome to Mumble! This quick guide will walk you through the simple steps to start capturing and transcribing your meetings and voice notes.
 
-Get your documentation site running locally and make your first customization.
-
-### Step 1: Set up your local environment
+### Follow the steps below to set up Mumble: 
 
 <AccordionGroup>
-  <Accordion icon="copy" title="Clone your docs locally">
-    During the onboarding process, you created a GitHub repository with your docs content if you didn't already have one. You can find a link to this repository in your [dashboard](https://dashboard.mintlify.com).
-    
-    To clone the repository locally so that you can make and preview changes to your docs, follow the [Cloning a repository](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository) guide in the GitHub docs.
+  <Accordion title="Step 1: Login" icon="copy">
+    Use the Gmail account you registered on the waitlist to log in directly. It’s already whitelisted for immediate access
   </Accordion>
-  <Accordion icon="rectangle-terminal" title="Start the preview server">
-    1. Install the Mintlify CLI: `npm i -g mint`
-    2. Navigate to your docs directory and run: `mint dev`
-    3. Open `http://localhost:3000` to see your docs live!
-    
-    <Tip>Your preview updates automatically as you edit files.</Tip>
+  <Accordion title="Step 2: Set up permission">
+    ![Screenshot 2025 12 26 At 1 06 39 PM](/images/Screenshot2025-12-26at1.06.39PM.png)
+
+    - Microphone Access: lets Mumble to capture your voice during meetings and voice notes
+    - System Audio Recording: allows Mumble to capture the voices of other meeting participants
+    - Accessibility: helps Mumble to monitor your apps and automatically detect when a meeting begins
+    - Screen Recording: enables Mumble to see your meeting screen and detect participants
+
+    Microphone Access and System Audio Recording are the essential permissions for voice notes and meeting features. These permissions are used only for transcription and never accessed or shared beyond your recording sessions.
   </Accordion>
-</AccordionGroup>
+  <Accordion title="Step 3: Choose your language">
+    Tell Mumble which languages to listen for so it can provide the most accurate transcription
 
-### Step 2: Deploy your changes
-
-<AccordionGroup>
-  <Accordion icon="github" title="Install our GitHub app">
-    Install the Mintlify GitHub app from your [dashboard](https://dashboard.mintlify.com/settings/organization/github-app).
-    
-    Our GitHub app automatically deploys your changes to your docs site, so you don't need to manage deployments yourself.
-</Accordion>
-<Accordion icon="palette" title="Update your site name and colors">
-    For a first change, let's update the name and colors of your docs site.
-
-    1. Open `docs.json` in your editor.
-    2. Change the `"name"` field to your project name.
-    3. Update the `"colors"` to match your brand.
-    4. Save and see your changes instantly at `http://localhost:3000`.
-
-    <Tip>Try changing the primary color to see an immediate difference!</Tip>
+    ![Screenshot 2025 12 26 At 1 06 14 PM](/images/Screenshot2025-12-26at1.06.14PM.png)
   </Accordion>
 </AccordionGroup>
-
-### Step 3: Go live
-
-<Accordion icon="rocket" title="Publish your docs">
-  1. Commit and push your changes.
-  2. Your docs will update and be live in moments!
-</Accordion>
-
-## Next steps
-
-Now that you have your docs running, explore these key features:
 
 <CardGroup cols={2}>
-
-<Card title="Write Content" icon="pen-to-square" href="/essentials/markdown">
-  Learn MDX syntax and start writing your documentation.
-</Card>
-
-<Card title="Customize style" icon="palette" href="/essentials/settings">
-  Make your docs match your brand perfectly.
-</Card>
-
-<Card title="Add code examples" icon="square-code" href="/essentials/code">
-  Include syntax-highlighted code blocks.
-</Card>
-
-<Card title="API documentation" icon="code" href="/api-reference/introduction">
-  Auto-generate API docs from OpenAPI specs.
-</Card>
-
+  
 </CardGroup>
 
 <Note>
-  **Need help?** See our [full documentation](https://mintlify.com/docs) or join our [community](https://mintlify.com/community).
+  **Need help?** See our [full documentation](https://mintlify.com/docs) or join our [WhatsApp](https://mintlify.com/community) or [Discord](https://discord.gg/KDzs3EWq8Q) community
 </Note>
