Documentation edits made through Mintlify web editor

--- a/ai-tools/cursor.mdx
+++ b/ai-tools/cursor.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Cursor setup"
+title: "Meetings Overview"
 description: "Configure Cursor for your documentation workflow"
 icon: "arrow-pointer"
 ---
