--- a/index.mdx
+++ b/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: "What Is Mumble"
+title: "What is Mumble AI"
 ---
 
 Mumble is a voice-first AI workspace that captures your ideas and meetings without any context switching. You speak, and Mumble instantly turns everything into organized notes, summaries, and calendar events.
