--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -5,13 +5,13 @@ description: "Start building awesome documentation in minutes"
 
 Welcome to Mumble! This quick guide will walk you through the simple steps to start capturing and transcribing your meetings and voice notes.
 
-### Follow the steps below to set up Mumble: 
+### Follow the steps below to set up Mumble:
 
 <AccordionGroup>
-  <Accordion title="Step 1: Login" icon="copy">
+  <Accordion title="Step 1: login" icon="copy">
     Use the Gmail account you registered on the waitlist to log in directly. It’s already whitelisted for immediate access
   </Accordion>
-  <Accordion title="Step 2: Set up permission">
+  <Accordion title="Step 2: set up permission">
     ![Screenshot 2025 12 26 At 1 06 39 PM](/images/Screenshot2025-12-26at1.06.39PM.png)
 
     - Microphone Access: lets Mumble to capture your voice during meetings and voice notes
@@ -21,7 +21,7 @@ Welcome to Mumble! This quick guide will walk you through the simple steps to st
 
     Microphone Access and System Audio Recording are the essential permissions for voice notes and meeting features. These permissions are used only for transcription and never accessed or shared beyond your recording sessions.
   </Accordion>
-  <Accordion title="Step 3: Choose your language">
+  <Accordion title="Step 3: choose your language">
     Tell Mumble which languages to listen for so it can provide the most accurate transcription
 
     ![Screenshot 2025 12 26 At 1 06 14 PM](/images/Screenshot2025-12-26at1.06.14PM.png)
