--- a/essentials/reusable-snippets.mdx
+++ b/essentials/reusable-snippets.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Reusable snippets"
+title: "Template"
 description: "Reusable, custom snippets to keep content in sync"
 icon: "recycle"
 ---
@@ -13,17 +13,12 @@ import SnippetIntro from '/snippets/snippet-intro.mdx';
 **Pre-condition**: You must create your snippet file in the `snippets` directory.
 
 <Note>
-  Any page in the `snippets` directory will be treated as a snippet and will not
-  be rendered into a standalone page. If you want to create a standalone page
-  from the snippet, import the snippet into another file and call it as a
-  component.
+  Any page in the `snippets` directory will be treated as a snippet and will not be rendered into a standalone page. If you want to create a standalone page from the snippet, import the snippet into another file and call it as a component.
 </Note>
 
 ### Default export
 
-1. Add content to your snippet file that you want to re-use across multiple
-   locations. Optionally, you can add variables that can be filled in via props
-   when you import the snippet.
+1. Add content to your snippet file that you want to re-use across multiple locations. Optionally, you can add variables that can be filled in via props when you import the snippet.
 
 ```mdx snippets/my-snippet.mdx
 Hello world! This is my content I want to reuse across pages. My keyword of the
@@ -31,8 +26,7 @@ day is {word}.
 ```
 
 <Warning>
-  The content that you want to reuse must be inside the `snippets` directory in
-  order for the import to work.
+  The content that you want to reuse must be inside the `snippets` directory in order for the import to work.
 </Warning>
 
 2. Import the snippet into your destination file.
@@ -77,8 +71,7 @@ Hello, my name is {myName} and I like {myObject.fruit}.
 
 ### Reusable components
 
-1. Inside your snippet file, create a component that takes in props by exporting
-   your component in the form of an arrow function.
+1. Inside your snippet file, create a component that takes in props by exporting your component in the form of an arrow function.
 
 ```mdx snippets/custom-component.mdx
 export const MyComponent = ({ title }) => (
@@ -90,8 +83,7 @@ export const MyComponent = ({ title }) => (
 ```
 
 <Warning>
-  MDX does not compile inside the body of an arrow function. Stick to HTML
-  syntax when you can or use a default export if you need to use MDX.
+  MDX does not compile inside the body of an arrow function. Stick to HTML syntax when you can or use a default export if you need to use MDX.
 </Warning>
 
 2. Import the snippet into your destination file and pass in the props
