Documentation edits made through Mintlify web editor

--- a/guides/ai-chat-meet-with-mumble/untitled-page.mdx
+++ b/guides/ai-chat-meet-with-mumble/untitled-page.mdx
@@ -2,3 +2,21 @@
 title: "How to Access Mumble"
 ---
 
+Mumble is your voice first AI agent. It helps you capture ideas, generate drafts, and manage your calendar and notes.
+
+**Where to Find Mumble**
+
+You can get access to Mumble from Home page or the bottom right corner of the Workspace page. Mumble also appears automatically inside key features whenever it can help you complete a task.
+
+**You will see Mumble when you**
+
+- create templates in Notes
+- edit smart note rules
+- generate AI drafts inside your documents
+
+**How to Start a Chat with Mumble**
+
+You can talk to Mumble using your voice or your keyboard. Both methods work the same and Mumble reacts instantly.
+
+- Hold the Option key and speak to begin a voice chat. Mumble listens and responds based on what you say
+- Type directly into the chat input if you prefer text.
