Documentation edits made through Mintlify web editor

--- a/guides/ai-chat-meet-with-mumble/untitled-page.mdx
+++ b/guides/ai-chat-meet-with-mumble/untitled-page.mdx
@@ -1,5 +1,6 @@
 ---
 title: "How to Access Mumble"
+icon: "comment"
 ---
 
 Mumble is your voice first AI agent. It helps you capture ideas, generate drafts, and manage your calendar and notes.
