--- a/essentials/navigation.mdx
+++ b/essentials/navigation.mdx
@@ -1,7 +1,7 @@
 ---
 title: "What Mumble Can Help With"
 description: "The navigation field in docs.json defines the pages that go in the navigation menu"
-icon: "map"
+icon: "comment"
 ---
 
 The navigation menu is the list of links on every website.
