Documentation edits made through Mintlify web editor

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -8,7 +8,7 @@ Welcome to Mumble! This quick guide will walk you through the simple steps to st
 ### Follow the steps below to set up Mumble:
 
 <AccordionGroup>
-  <Accordion title="Step 1: login" icon="copy">
+  <Accordion title="Step 1: login">
     Use the Gmail account you registered on the waitlist to log in directly. It’s already whitelisted for immediate access
   </Accordion>
   <Accordion title="Step 2: set up permission">
