Documentation edits made through Mintlify web editor

--- a/essentials/settings.mdx
+++ b/essentials/settings.mdx
@@ -3,3 +3,17 @@ title: "Explore Chat"
 icon: "comment"
 ---
 
+**Use the Chat in the Way That Works Best for You**
+
+You can start a voice comment at any moment with the shortcut key. This reduces context switching and keeps your workflow smooth and uninterrupted.
+
+More voice skills will continue to roll out, helping you think faster and stay productive with less effort!
+
+**Message Input Toolbar**
+
+The message bar gives you flexible ways to share content with Mumble. It supports quick uploads and helps Mumble understand more context about your work.
+
+You can use the toolbar to:
+
+- drag and drop images into the chat
+- attach local files from your device
