Documentation edits made through Mintlify web editor

--- a/essentials/markdown.mdx
+++ b/essentials/markdown.mdx
@@ -1,7 +1,7 @@
 ---
 title: "AI Draft"
 description: "Text, title, and styling in standard markdown"
-icon: "text-size"
+icon: "notes"
 ---
 
 ## Titles
