--- a/essentials/reusable-snippets.mdx
+++ b/essentials/reusable-snippets.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Template"
 description: "Reusable, custom snippets to keep content in sync"
-icon: "recycle"
+icon: "notes"
 ---
 
 import SnippetIntro from '/snippets/snippet-intro.mdx';
