--- a/essentials/images.mdx
+++ b/essentials/images.mdx
@@ -1,48 +1,26 @@
 ---
 title: "Smart Notes"
-description: "Add image, video, and other HTML elements"
 icon: "notes"
 ---
 
-<img
-  style={{ borderRadius:"0.5rem" }}
-  src="https://mintlify-assets.b-cdn.net/bigbend.jpg"
-/>
+Smart Notes help you automatically organize messy notes into structured ones. You set the rules once, and Mumble takes care of the rest.
 
-## Image
+- Function: automatic structuring of messy notes
 
-### Using Markdown
+  Smart Notes are designed to:
+  - Automatically structure and organize your notes
+  - Continuously collect related voice notes into a single organized note
 
-The [markdown syntax](https://www.markdownguide.org/basic-syntax/#images) lets you add images using the following code
 
-```md
-![title](/path/image.jpg)
-```
+- How to use
+  - Set rules
 
-Note that the image file size must be less than 5MB. Otherwise, we recommend hosting on a service like [Cloudinary](https://cloudinary.com/) or [S3](https://aws.amazon.com/s3/). You can then use that URL and embed.
+    You can set rules in two ways:
+    - Ask Mumble to generate rules for you
+    - Create the rules yourself
+  - Edit rules
 
-### Using embeds
-
-To get more customizability with images, you can also use [embeds](/writing-content/embed) to add images
-
-```html
-<img height="200" src="/path/image.jpg" />
-```
-
-## Embeds and HTML elements
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/4KzFe50RQkQ" title="YouTube video player" frameBorder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowFullScreen style={{ width:"100%",borderRadius:"0.5rem" }} />
-
-<br />
-
-<Tip>
-  Mintlify supports [HTML tags in Markdown](https://www.markdownguide.org/basic-syntax/#html). This is helpful if you prefer HTML tags to Markdown syntax, and lets you create documentation with infinite flexibility.
-</Tip>
-
-### iFrames
-
-Loads another HTML page within the document. Most commonly used for embedding videos.
-
-```html
-<iframe src="https://www.youtube.com/embed/4KzFe50RQkQ"> </iframe>
-```
+    Editing rules works the same way as editing AI Drafts:
+    - You can click “Edit with AI” and describe the changes you want
+    - You can manually add or remove rule details
+    - You can select part of a rule and use voice edit by holding option
