--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Getting Started"
 description: "Start building awesome documentation in minutes"
+icon: "check-to-slot"
 ---
 
 Welcome to Mumble! This quick guide will walk you through the simple steps to start capturing and transcribing your meetings and voice notes.
