Documentation edits made through Mintlify web editor

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -13,7 +13,7 @@ Welcome to Mumble! This quick guide will walk you through the simple steps to st
     Use the Gmail account you registered on the waitlist to log in directly. It’s already whitelisted for immediate access
   </Accordion>
   <Accordion title="Step 2: set up permission">
-    ![Group 292549](/images/Group292549.png)
+    ![Screenshot 2025 12 30 At 9 51 11 AM](/images/Screenshot2025-12-30at9.51.11AM.png)
 
     - Microphone Access: lets Mumble to capture your voice during meetings and voice notes
     - System Audio Recording: allows Mumble to capture the voices of other meeting participants
@@ -23,7 +23,7 @@ Welcome to Mumble! This quick guide will walk you through the simple steps to st
     Microphone Access and System Audio Recording are the essential permissions for voice notes and meeting features. These permissions are used only for transcription and never accessed or shared beyond your recording sessions.
   </Accordion>
   <Accordion title="Step 3: choose your language">
-    ![Group 292550](/images/Group292550.png)
+    ![Screenshot 2025 12 30 At 9 51 39 AM](/images/Screenshot2025-12-30at9.51.39AM.png)
 
     Tell Mumble which languages to listen for so it can provide the most accurate transcription
   </Accordion>
