Documentation edits made through Mintlify web editor

--- a/Guides/notes/smart-notes.mdx
+++ b/Guides/notes/smart-notes.mdx
@@ -1,6 +1,5 @@
 ---
-title: "Smart Notes"
-icon: "notes"
+title: "Smart notes"
 ---
 
 Smart Notes help you automatically organize messy notes into structured ones. You set the rules once, and Mumble takes care of the rest.
@@ -10,8 +9,6 @@ Smart Notes help you automatically organize messy notes into structured ones. Yo
   Smart Notes are designed to:
   - Automatically structure and organize your notes
   - Continuously collect related voice notes into a single organized note
-
-
 - How to use
   - Set rules
 
