Documentation edits made through Mintlify web editor

--- a/guides/meetings/meeting-summary.mdx
+++ b/guides/meetings/meeting-summary.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Meeting Summary"
+mode: "wide"
 ---
 
 After a meeting ends, Mumble helps you turn the conversation into a clear and useful summary. You can choose different templates, regenerate outputs, and export the results to share with others.
