--- a/guides/meetings/meetings-overview.mdx
+++ b/guides/meetings/meetings-overview.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Meetings Overview"
+mode: "wide"
 ---
 
 Meetings help you capture conversations automatically and turn them into structured notes and summaries. In Mumble, you can manage upcoming meetings, review past ones, and take notes in real time without interrupting the flow of the conversation.
