--- a/guides/notes/notes-overview.mdx
+++ b/guides/notes/notes-overview.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Notes Overview"
+mode: "wide"
 ---
 
 Notes are the core space in Mumble where you capture, organize, and revisit your thoughts. Whether you type, speak, or generate content with AI, everything lives in notes so it is easy to manage and edit later.
