--- a/guides/notes/smart-notes.mdx
+++ b/guides/notes/smart-notes.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Smart notes"
+mode: "wide"
 ---
 
 Smart Notes help you automatically organize messy notes into structured ones. You set the rules once, and Mumble takes care of the rest.
