--- a/guides/notes/template.mdx
+++ b/guides/notes/template.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Template"
+mode: "wide"
 ---
 
 Templates help you create consistent, well structured content quickly. The same template library is used for meeting summaries, notes, and AI Drafts.
