--- a/guides/ai-chat/how-to-access-mumble.mdx
+++ b/guides/ai-chat/how-to-access-mumble.mdx
@@ -1,5 +1,6 @@
 ---
 title: "How to Access Mumble"
+mode: "wide"
 ---
 
 Mumble is your voice first AI agent. It helps you capture ideas, generate drafts, and manage your calendar and notes.
