--- a/guides/ai-chat/what-mumble-can-help-with.mdx
+++ b/guides/ai-chat/what-mumble-can-help-with.mdx
@@ -1,5 +1,6 @@
 ---
 title: "What Mumble Can Help With"
+mode: "wide"
 ---
 
 Mumble is more than a voice dictation tool. It understands what you want to do, generates content, manages your calendar and contacts, and helps you stay organized while thinking faster across your workspace.
