--- a/guides/mumble-ai-101/getting-started.mdx
+++ b/guides/mumble-ai-101/getting-started.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Getting Started"
-description: "Start building awesome documentation in minutes"
+mode: "wide"
 ---
 
 Welcome to Mumble! This quick guide will walk you through the simple steps to start capturing and transcribing your meetings and voice notes.
