--- a/guides/mumble-ai-101/what-is-mumble-ai.mdx
+++ b/guides/mumble-ai-101/what-is-mumble-ai.mdx
@@ -1,5 +1,6 @@
 ---
 title: "What is Mumble AI"
+mode: "wide"
 ---
 
 Mumble is a voice-first AI workspace that captures your ideas and meetings without any context switching. You speak, and Mumble instantly turns everything into organized notes, summaries, and calendar events.
