Documentation edits made through Mintlify web editor

--- a/guides/Something-Else/how-to-change-shortcut.mdx
+++ b/guides/Something-Else/how-to-change-shortcut.mdx
@@ -18,7 +18,7 @@ You can customize your shortcut settings in the following places:
 
 When setting up your own shortcuts, please make sure they follow these rules:
 
-1. A valid shortcut can be:
+1. A valid shortcut can be
    - One modifier key
    - Two modifier keys
    - One modifier key plus one other key (a letter or a number)
