Reorder pages and hide template guide

--- a/guides/notes/template.mdx
+++ b/guides/notes/template.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Template"
 mode: "wide"
+hidden: true
 ---
 
 Templates help you create consistent, well structured content quickly. The same template library is used for meeting summaries, notes, and AI Drafts.
