Refine meeting summary, notes, and AI chat documentation

--- a/guides/mumble-ai-101/getting-started.mdx
+++ b/guides/mumble-ai-101/getting-started.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Getting Started"
 mode: "wide"
+hidden: true
 ---
 
 Welcome to Mumble! This quick guide will walk you through the simple steps to start capturing and transcribing your meetings and voice notes.
