--- a/guides/notes/notes-overview.mdx
+++ b/guides/notes/notes-overview.mdx
@@ -11,7 +11,7 @@ Notes are the core space in Mumble where you capture, organize, and revisit your
 
   If you click the 🌟 icon in the top right of a note, it will be added to your favorites. You can quickly find all starred notes in “🌟 Favorites”.
 
-  When you create Smart Note rules and turn “Smart Notes” on, notes that match those rules will be automatically organized. You can view them anytime in “Smart Notes”. For a detailed explanation, visit **Smart Notes [with hyperlink]**.
+  When you create Smart Note rules and turn “Smart Notes” on, notes that match those rules will be automatically organized. You can view them anytime in “Smart Notes”. 
 - Note types: text note, voice note
 
   Mumble supports two main types of notes: text notes and voice notes. You can edit notes by typing directly, or by clicking the “+” on the left to add different blocks.
