Hide template overview, creation, and management pages

--- a/creating-template.mdx
+++ b/creating-template.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Creating Template"
+hidden: true
 ---
 
 You can create a template in two different ways: with AI assistance or manually.
