Add dictation and local voice model docs, update existing guides

--- a/guides/ai-chat/explore-chat.mdx
+++ b/guides/ai-chat/explore-chat.mdx
@@ -7,7 +7,7 @@ mode: "wide"
 
 You can start a voice comment at any moment with the shortcut key. This reduces context switching and keeps your workflow smooth and uninterrupted.
 
-More voice skills will continue to roll out, helping you think faster and stay productive with less effort!
+More voice skills will continue to roll out, helping you think faster and stay productive with less effort.
 
 **Message Input Toolbar**
 
