--- a/guides/ai-chat/how-to-access-mumble.mdx
+++ b/guides/ai-chat/how-to-access-mumble.mdx
@@ -13,11 +13,10 @@ You can get access to Mumble from Home page or the bottom right corner of the Wo
 
 - create templates in Notes
 - edit smart note rules
-- generate AI drafts inside your documents
 
 **How to Start a Chat with Mumble**
 
 You can talk to Mumble using your voice or your keyboard. Both methods work the same and Mumble reacts instantly.
 
-- Hold the Option key and speak to begin a voice chat. Mumble listens and responds based on what you say
-- Type directly into the chat input if you prefer text.
+- Hold the **"fn"** key and speak to begin a voice chat. Mumble listens and responds based on what you say
+- Type directly into the chat input if you prefer text
