--- a/guides/ai-chat/voice-skill-1.mdx
+++ b/guides/ai-chat/voice-skill-1.mdx
@@ -6,9 +6,7 @@ Mumble can help you schedule events using your voice and automatically sync them
 
 **How to use Event Scheduling**
 
-- Hold “option” + “space” to trigger global callout. As you speak, Mumble automatically detects the right voice skill, or you can select “Schedule” from the Voice skill on the Home page.
+- Hold **"option" + "space"** to trigger global callout. As you speak, Mumble automatically detects the right voice skill, or you can select **"Schedule"** from the Voice skill on the Home page.
 - Tell Mumble what event you want to schedule
 
-  Mention the time, duration, and participants for the event
-
-  Mumble can schedule and reschedule events for you, but canceling events by voice isn’t supported yet.
+  Mention the time, duration, and participants for the event. Mumble can schedule and reschedule events for you, but canceling events by voice isn’t supported yet.
