--- a/guides/ai-chat/voice-skill-2.mdx
+++ b/guides/ai-chat/voice-skill-2.mdx
@@ -6,13 +6,13 @@ Mumble helps you send messages to your WhatsApp contacts using your voice, so yo
 
 Follow the steps below to set it up and get started:
 
-1. Go to Settings
+1. Go to **Settings**
 2. Turn on WhatsApp access. You’ll be redirected to a web page with a QR code
 
 ![Help Doc Voice Skill 2](/images/help_doc_voice-skill_2.png)
 
 3. Follow the instructions on the web page to scan the QR code and connect your WhatsApp account with Mumble
-4. Return to the app, press “option” + “space”, or select “Message” from the Voice Skills, and tell Mumble:
+4. Return to the app, press **"option" + "space"**, or select **"Message"** from the Voice Skills, and tell Mumble:
    - who you want to message on WhatsApp, and
    - what message you want to send.
 
