--- a/guides/ai-chat/voice-skill-3.mdx
+++ b/guides/ai-chat/voice-skill-3.mdx
@@ -4,6 +4,6 @@ title: "Voice Skill 3: Schedule and Message"
 
 This skill combines Skill 1 and Skill 2, allowing Mumble to schedule an event and send a message to your WhatsApp contact at the same time.
 
-To use this voice skill, you can either press “option” + “space” and speak naturally, letting Mumble decide which skill to use, or select “Schedule and Message” from the Voice skill menu.
+To use this voice skill, you can either press **"option" + "space"** and speak naturally, letting Mumble decide which skill to use, or select **"Schedule and Message"** from the Voice skill menu.
 
 ![Help Doc Voice Skill 3](/images/help_doc_voice_skill_3.gif)
