--- a/guides/meetings/meeting-summary.mdx
+++ b/guides/meetings/meeting-summary.mdx
@@ -7,12 +7,12 @@ After a meeting ends, Mumble helps you turn the conversation into a clear and us
 
 - Meeting summary template
 
-  Inside the summary block, click Auto to open the template menu. You can select different templates to structure your meeting summary.
+  Inside the summary block, click **"Auto"** to open the template menu. You can select different templates to structure your meeting summary.
 - Meeting output
 
-  You can also choose different output templates to regenerate the meeting content. When you click “+ New output” and apply a new output template, the newly generated content appears below the existing summary. The original content is not overwritten, so you can compare different versions and keep what works best for you.
+  You can also choose different output templates to regenerate the meeting content. When you click **"+ New output"** and apply a new output template, the newly generated content appears below the existing summary. The original content is not overwritten, so you can compare different versions and keep what works best for you.
 - Regenerate and export
 
-  If you are not satisfied with the summary, click “Re-generate” in the top right corner to create a new version.
+  If you are not satisfied with the summary, click **"Regenerate"** in the top right corner to create a new version.
 
-  To share or save your summary, click Export to export the content as a Google Doc. This makes it easy to send meeting notes to teammates or store them with your other documents.
+  To share or save your summary, click **"Export to Google Docs"**. This makes it easy to send meeting notes to teammates or store them with your other documents.
