--- a/guides/meetings/meetings-overview.mdx
+++ b/guides/meetings/meetings-overview.mdx
@@ -16,11 +16,13 @@ Meetings help you capture conversations automatically and turn them into structu
     Mumble can automatically detect meetings from your Google Calendar. When you have a meeting scheduled in Google Calendar, Mumble recognizes it and shows a pop up reminder before the meeting starts.
   - How auto-recording is triggered
 
-    If you turn on Auto recording in Settings, Mumble will automatically start recording when the meeting begins and stop recording when the meeting ends. This way, you do not have to worry about starting or stopping recordings manually.
+    Auto Recording is now enabled by default. Once a meeting begins, Mumble will automatically start recording and stop when the meeting ends, so there is no need to manually start or stop anything.
+
+    If you would like to turn it off, simply go to the Settings page and toggle off Auto Recording.
 - Create upcoming meeting
   - Manually adding an upcoming meeting
 
-    To add an upcoming meeting, click “New upcoming meeting”. When the meeting starts, click Start recording to begin capturing the conversation.
+    To add an upcoming meeting, click **"+ New upcoming meeting"**. When the meeting starts, click **"Start recording"** to begin capturing the conversation.
   - Editing meeting details
 
     On the upcoming meeting page, you can edit meeting details at any time. You can set the title, adjust the start time, add people, and apply a specific template. You can also sync the meeting to your Google Calendar if needed.
