--- a/guides/mumble-ai-101/getting-started.mdx
+++ b/guides/mumble-ai-101/getting-started.mdx
@@ -1,20 +1,20 @@
 ---
 title: "Getting Started"
 mode: "wide"
-hidden: true
 ---
 
-Welcome to Mumble! This quick guide will walk you through the simple steps to start capturing and transcribing your meetings and voice notes.
+Welcome to Mumble! This quick guide will walk you through the onboarding process and help you get set up in just a few steps.
 
-### Follow the steps below to set up Mumble:
+### Follow the steps below to complete your setup and start using Mumble:
 
 <AccordionGroup>
   <Accordion title="Step 1: login">
     Use the Gmail account you registered on the waitlist to log in directly. It’s already whitelisted for immediate access
   </Accordion>
   <Accordion title="Step 2: set up permission">
-    ![Screenshot 2025 12 30 At 9 51 11 AM](/images/Screenshot2025-12-30at9.51.11AM.png)
-
+    <Frame>
+      ![Screenshot 2026 02 13 At 4 04 10 PM](/images/Screenshot2026-02-13at4.04.10PM.png)
+    </Frame>
     - Microphone Access: lets Mumble to capture your voice during meetings and voice notes
     - System Audio Recording: allows Mumble to capture the voices of other meeting participants
     - Accessibility: helps Mumble to monitor your apps and automatically detect when a meeting begins
@@ -22,9 +22,22 @@ Welcome to Mumble! This quick guide will walk you through the simple steps to st
 
     Microphone Access and System Audio Recording are the essential permissions for voice notes and meeting features. These permissions are used only for transcription and never accessed or shared beyond your recording sessions.
   </Accordion>
-  <Accordion title="Step 3: choose your language">
-    ![Screenshot 2025 12 30 At 9 51 39 AM](/images/Screenshot2025-12-30at9.51.39AM.png)
-
+  <Accordion title='Step 3: set up the "fn" key'>
+    We use the **"fn"** key as the default dictation shortcut. To make sure it works properly in the app, go to your system settings and set the **"fn"** key to **"Do Nothing"**.
+  </Accordion>
+  <Accordion title="Step 4: test your shortcut">
+    <Frame>
+      ![Screenshot 2026 02 13 At 4 16 14 PM](/images/Screenshot2026-02-13at4.16.14PM.png)
+    </Frame>
+    Test whether your shortcut works. On this page, you can click **“No, change shortcuts”** to update it, or go to the app’s **Settings** page to change the shortcut there.
+  </Accordion>
+  <Accordion title="Step 5: choose your language">
+    <Frame>
+      ![Screenshot 2026 02 13 At 4 09 07 PM](/images/Screenshot2026-02-13at4.09.07PM-1.png)
+    </Frame>
     Tell Mumble which languages to listen for so it can provide the most accurate transcription
+  </Accordion>
+  <Accordion title="Step 6: explore the product">
+    During onboarding, we’ve included a few interactive components to help you better understand Mumble’s key features. You can follow the prompts to try them out, click **"Quick demo"** to watch a video walkthrough, or simply click **"Continue"** to skip.
   </Accordion>
 </AccordionGroup>
