--- a/guides/notes/notes-overview.mdx
+++ b/guides/notes/notes-overview.mdx
@@ -9,20 +9,16 @@ Notes are the core space in Mumble where you capture, organize, and revisit your
 
   In the Notes view, the notes list appears on the left and the selected note opens on the right. At the top of the list, you can use filters to decide how notes are displayed, either sorted by last updated time or by creation time.
 
-  If you click the 🌟 icon in the top right of a note, it will be added to your favorites. You can quickly find all starred notes in “🌟 Favorites”.
+  If you click the 🌟 icon in the top right corner of a note, it will be added to your favorites. You can quickly find all your starred notes in the **Favorites** section in the left sidebar or from the **Favorites** tab at the top of the Notes page.
 
-  When you create Smart Note rules and turn “Smart Notes” on, notes that match those rules will be automatically organized. You can view them anytime in “Smart Notes”. 
+  When you create Smart Note rules and turn **“Smart Notes”** on, notes that match those rules will be automatically organized. You can view them anytime in **Smart Notes** tab at the top of the Notes page.
 - Note types: text note, voice note
 
-  Mumble supports two main types of notes: text notes and voice notes. You can edit notes by typing directly, or by clicking the “+” on the left to add different blocks.
-  - For quick capture, hold option to start voice dictation. What you say will be transcribed into text and appear directly in your note.
-  - If you want to keep the original recording, press “option” + “space” to create a voice note block. In the voice note panel:
+  Mumble supports two main types of notes: text notes and voice notes. You can edit notes by typing directly, or by clicking the **"+"** on the left to add different blocks.
+  - For quick capture, hold **"fn"** to start voice dictation. What you say will be transcribed into text and appear directly in your note.
+  - If you want to keep the original recording, press **"option" + "space"** to create a voice note block. 
 
-    Click the down arrow to move the block into a new note
-
-    Click the up arrow to keep the block in the current note
-
-    The difference between voice dictation and voice notes is dictation only turns speech into text, but voice notes keep the original audio and transcript, and let you apply templates or regenerate structured content
+  The difference between voice dictation and voice notes is dictation only turns speech into text, but voice notes keep the original audio and transcript, and let you apply templates or regenerate structured content
 - Basic actions
   - Create a note Click the “+” next to Notes and select New note. You will see a blank note. The note is saved only after you add a title or content.
   - Create a voice note Click the “+” next to Notes and select New voice note. This opens the same voice note panel as pressing option + space.
