--- a/guides/notes/smart-notes.mdx
+++ b/guides/notes/smart-notes.mdx
@@ -1,13 +1,11 @@
 ---
-title: "Smart notes"
+title: "Smart Notes"
 mode: "wide"
 ---
 
-Smart Notes help you automatically organize messy notes into structured ones. You set the rules once, and Mumble takes care of the rest.
+Smart notes help you automatically organize messy notes into structured ones. You set the rules once, and Mumble takes care of the rest.
 
-- Function: automatic structuring of messy notes
-
-  Smart Notes are designed to:
+- Smart notes are designed to:
   - Automatically structure and organize your notes
   - Continuously collect related voice notes into a single organized note
 - How to use
@@ -18,7 +16,7 @@ Smart Notes help you automatically organize messy notes into structured ones. Yo
     - Create the rules yourself
   - Edit rules
 
-    Editing rules works the same way as editing AI Drafts:
-    - You can click “Edit with AI” and describe the changes you want
+    You have three ways to edit Rules:
+    - You can click **"Edit with AI"** and describe the changes you want
     - You can manually add or remove rule details
     - You can select part of a rule and use voice edit by holding option
