Improve formatting and clarity in template docs

--- a/creating-template.mdx
+++ b/creating-template.mdx
@@ -4,9 +4,9 @@ title: "Creating Template"
 
 You can create a template in two different ways: with AI assistance or manually.
 
-At the top of the template list on the left panel, you’ll see a + New Template button. Click it to choose between: Generating a template with AI and Creating one yourself.
+At the top of the template list on the left panel, you’ll see a **\+ New Template** button. Click it to choose between: Generating a template with AI and Creating one yourself.
 
-- Select “Describe what you need” and tell Mumble what this template is for. You can describe the purpose, structure, or sections you would like to include.
-- If you choose “Create manually”, you can:
+- Select **“Describe what you need”** and tell Mumble what this template is for. You can describe the purpose, structure, or sections you would like to include.
+- If you choose **“Create manually”**, you can:
   - Type directly into the editor
   - Use voice dictation shortcut to input content by talking
