--- a/managing-template.mdx
+++ b/managing-template.mdx
@@ -28,4 +28,4 @@ In the preview page, you can generate output using either a built in sample from
 
 **Favorite templates**
 
-You can click Favorite in the top right corner of a template to save it. Favorited templates will appear at the top of the template selection dropdown in Meeting Summary or Notes.
+You can click **Favorite** in the top right corner of a template to save it. Favorited templates will appear at the top of the template selection dropdown in meeting summary or notes.
