--- a/local-voice-model.mdx
+++ b/local-voice-model.mdx
@@ -6,10 +6,12 @@ Mumble uses the most advanced AI models available to turn your voice into accura
 
 For users who prefer complete on-device processing and full control over their data, Mumble also offers local voice models. When enabled, all speech processing runs entirely on your Mac. Your audio never leaves your device and no external services are involved.
 
+Local Models are available for both Meetings and Dictation. You can enable them separately in Settings.
+
 To use the local dictation model:
 
 - Go to the **Settings** page
 - In the **Local Processing** section, click **"Download"** to download the model
-- To enable local processing for dictation, go to the **Dictation** section and toggle on **"Use Local Processing."** Local processing for meetings will be available soon.
+- To enable local processing for meetings, go to the **Meeting** section and toggle on **“Use Local Processing.” **To enable local processing for dictation, go to the **Dictation** section and toggle on **“Use Local Processing.”**
 
 Note: Local dictation model works best with a single language. Selecting multiple languages may reduce accuracy.
