Update images and clarify local processing instructions

--- a/local-voice-model.mdx
+++ b/local-voice-model.mdx
@@ -12,6 +12,6 @@ To use the local dictation model:
 
 - Go to the **Settings** page
 - In the **Local Processing** section, click **"Download"** to download the model
-- To enable local processing for meetings, go to the **Meeting** section and toggle on **“Use Local Processing.” **To enable local processing for dictation, go to the **Dictation** section and toggle on **“Use Local Processing.”**
+- To enable local processing for meetings, go to the **Meeting** section and toggle on “Use Local Processing.” To enable local processing for dictation, go to the **Dictation** section and toggle on **“Use Local Processing.”**
 
 Note: Local dictation model works best with a single language. Selecting multiple languages may reduce accuracy.
