--- a/managing-template.mdx
+++ b/managing-template.mdx
@@ -17,7 +17,7 @@ All existing templates can be customized. You can modify their content, category
 If you want to see how a template works before using it, click Preview in the bottom right corner.
 
 <Frame>
-  ![Group 292714](/images/Group292714.png)
+  ![IMG 6502](/images/IMG_6502.png)
 </Frame>
 
 In the preview page, you can generate output using either a built in sample from Mumble AI or your own notes. This helps you understand how the final result will look in real scenarios.
